--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/core": "^7.14.8",
     "@babel/node": "^7.14.7",
     "@babel/preset-env": "^7.14.8",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "prisma": "^2.27.0"
   }
 }
