--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/pjoon357/instaclone-BE#readme",
   "dependencies": {
+    "@prisma/client": "^2.27.0",
     "apollo-server": "^3.0.2",
     "graphql": "^15.5.1"
   },
