--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "dependencies": {
     "@prisma/client": "^2.27.0",
     "apollo-server": "^3.0.2",
-    "graphql": "^15.5.1"
+    "dotenv": "^10.0.0",
+    "graphql": "^15.5.1",
+    "graphql-tools": "^7.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.14.8",
