--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
+    "preinstal": "npx npm-force-resolutions",
     "dev": "nodemon --exec babel-node server.js",
     "migrate": "npx prisma migrate dev",
     "studio": "npx prisma studio"
@@ -21,11 +22,15 @@
   "dependencies": {
     "@prisma/client": "^2.27.0",
     "apollo-server": "^3.0.2",
+    "apollo-server-express": "^3.0.2",
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
+    "express": "^4.17.1",
     "graphql": "^15.5.1",
     "graphql-tools": "^7.0.5",
-    "jsonwebtoken": "^8.5.1"
+    "graphql-upload": "^12.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.8",
@@ -33,5 +38,9 @@
     "@babel/preset-env": "^7.14.8",
     "nodemon": "^2.0.12",
     "prisma": "^2.27.0"
+  },
+  "resolutions": {
+    "fs-capacitor": "^6.2.0",
+    "graphql-upload": "^11.0.0"
   }
 }
