--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   },
   "homepage": "https://github.com/pjoon357/instaclone-BE#readme",
   "dependencies": {
+    "@paljs/plugins": "^3.6.1",
     "@prisma/client": "^2.28.0",
     "apollo-server": "^3.0.2",
     "apollo-server-express": "^3.0.2",
+    "aws-sdk": "^2.955.0",
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
