--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/pjoon357/instaclone-BE#readme",
   "dependencies": {
+    "@graphql-tools/schema": "^8.0.1",
     "@paljs/plugins": "^3.6.1",
     "@prisma/client": "^2.28.0",
     "apollo-server": "^3.0.2",
@@ -29,10 +30,12 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "graphql": "^15.5.1",
+    "graphql-subscriptions": "^1.2.1",
     "graphql-tools": "^7.0.5",
     "graphql-upload": "^12.0.0",
     "jsonwebtoken": "^8.5.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "subscriptions-transport-ws": "^0.9.19"
   },
   "devDependencies": {
     "@babel/core": "^7.14.8",
