--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "scripts": {
     "preinstal": "npx npm-force-resolutions",
-    "dev": "nodemon --exec babel-node server.js",
+    "dev": "nodemon --exec babel-node src/server.js",
     "migrate": "npx prisma migrate dev",
-    "studio": "npx prisma studio"
+    "studio": "npx prisma studio",
+    "build": "babel src --out-dir build",
+    "start": "node build/server"
   },
   "repository": {
     "type": "git",
@@ -20,6 +22,7 @@
   },
   "homepage": "https://github.com/pjoon357/instaclone-BE#readme",
   "dependencies": {
+    "@babel/cli": "^7.14.8",
     "@graphql-tools/schema": "^8.0.1",
     "@paljs/plugins": "^3.6.1",
     "@prisma/client": "^2.28.0",
@@ -40,6 +43,7 @@
   "devDependencies": {
     "@babel/core": "^7.14.8",
     "@babel/node": "^7.14.7",
+    "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "^7.14.8",
     "nodemon": "^2.0.12",
     "prisma": "^2.27.0"
